# pixi-test

./: .envrc  pyproject.toml
pixi_test/: __init__.py
